# micro-rp2040

./: .gitignore  Cargo.toml  README.md  build.rs  memory.ld  objcopy.sh  openocd.sh
examples/: async-blinky.rs  blinky.rs  dma-simple.rs  uart.rs
src/: asm.S  features.rs  lib.rs  macros.rs  prelude.rs
src/alloc/: mod.rs  page.rs  slab.rs
src/comm/: mod.rs
src/comm/uart/: mod.rs
src/comm/uart/uart/: asynchronous.rs  blocking.rs  mod.rs
src/dma/: asynchronous.rs  channel.rs  handle.rs  mod.rs  stream.rs
src/dma/buffer/: copy.rs  mod.rs
src/dma/channel/: channel.rs  mod.rs
src/dma/channelv1/: any.rs  channel.rs  mod.rs
src/dma/stream/: mod.rs  multi.rs
src/error/: adc.rs  comm.rs  cortex.rs  dma.rs  i2c.rs  mod.rs  spi.rs  system.rs
src/hal/: mod.rs  parallel8080.rs
src/hal/adc/: common.rs  mod.rs  oneshot.rs  roundrobin.rs
src/hal/gpio/: mod.rs
src/hal/gpio/adc/: mod.rs
src/hal/gpio/button/: mod.rs
src/hal/gpio/clock/: input.rs  mod.rs  output.rs
src/hal/gpio/common/: base.rs  function.rs  mod.rs
src/hal/gpio/i2c/: mod.rs  scl.rs  sda.rs
src/hal/gpio/interrupt/: core0.rs  core1.rs  mod.rs  token.rs  trigger.rs
src/hal/gpio/uart/: mod.rs  rx.rs  tx.rs
src/hal/pins/: mod.rs
src/hal/pwm/: mod.rs
src/hal/pwm/capture/: handler.rs  mod.rs
src/hal/spi/: common.rs  master.rs  mod.rs
src/hal/spi/interface/: mod.rs
src/hal/spi/interface/blocking/: master.rs  mod.rs
src/hal/uart/: handler.rs  mod.rs
src/hal/uart/handlers/: mod.rs  rx.rs
src/hal/usb/: mod.rs
src/hal/usb/desc/: endpoint.rs  interface.rs  mod.rs
src/hal/usb/desc/configuration/: mod.rs
src/hal/usb/desc/string/: mod.rs  string.rs  zero.rs
src/hal/usb/ep/: control.rs  mod.rs
src/hal/usb/setup/: mod.rs
src/ints/: macros.rs  mod.rs  vectortable.rs
src/ints/handlers/: dma.rs  mod.rs
src/math/: float32.rs  int32.rs  mod.rs  table32.rs  uint32.rs
src/peripherals/: mod.rs
src/peripherals/comm/: mod.rs
src/peripherals/comm/i2c/: config.rs  mod.rs
src/peripherals/comm/uart/: frame.rs  handle.rs  mod.rs  rx.rs  tx.rs
src/peripherals/comm/uart.v1/: config.rs  mod.rs
src/peripherals/dma/: channel.rs  handle.rs  mod.rs  stream.rs
src/peripherals/dma/buffer/: mod.rs  ram.rs
src/peripherals/pins/: adc.rs  i2c.rs  led.rs  mod.rs  pwm.rs  spi.rs  uart.rs
src/pins/: mod.rs  uart.rs  uart.v1.rs
src/power/: mod.rs  power.rs  reset.rs
src/raw/: mod.rs  per.rs  reg.rs
src/raw/reg/: mod.rs  rreg.rs  xreg.rs
src/sync/: fifo.rs  mod.rs  spinlock.rs  syslock.rs
src/sync/lock/: alloc.rs  default.rs  mod.rs  system.rs
src/sys/: mod.rs
src/sys/boot2/: mod.rs
src/sys/boot2/generic03h/: mod.rs
src/sys/boot2/src/: addressmap.h  at25sf128a.S  exit_from_boot2.S  generic03h.S  is25lp080.S  pads_qspi.h  platform_defs.h  read_flash_sreg.S  ssi.h  w25q080.S  w25q080X.S  w25x10cl.S  wait_ssi_ready.S
src/sys/clocks/: mod.rs
src/sys/clocks/outputs/: mod.rs  peripheral.rs  reference.rs  system.rs  usb.rs
src/sys/clocks/sources/: pllsys.rs  pllusb.rs  rosc.rs  xosc.rs
src/sys/init/: core0.rs  core1.rs  mod.rs
src/sys/init/core0/: initialize.rs  jump.rs  mod.rs  sections.rs  wakeup.rs
src/sys/init/core1/: initialize.rs  jump.rs  mod.rs
src/sys/ints/: mod.rs  tables.rs
src/sys/ints/handlers/: default.rs  dma.rs  mod.rs
src/sys/local/: lock.rs  mod.rs
src/sys/power/: mod.rs  power.rs  reset.rs
src/sys/res/: mod.rs
src/sys/resources/: mod.rs  release.rs  resources.rs
src/sys/resources/resource/: acquire.rs  mod.rs  release.rs
src/sys/resources/restart/: mod.rs  pause.rs  resume.rs
src/time/: alarm.rs  mod.rs  rtc.rs  systick.rs  timer.rs  watchdog.rs
src/time/clocks/: info.rs  mod.rs
src/time/clocks/outputs/: mod.rs  peripheral.rs  reference.rs  system.rs  usb.rs
src/time/clocks/sources/: mod.rs  pllsys.rs  pllusb.rs  rosc.rs  xosc.rs
(+24 files in other folders)
