[package]
name = "rp2040"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.dev]
panic = "abort"
lto = true
debug = true



[profile.release]
panic = "abort"
lto = true
debug = true

[dependencies]


[dependencies.micro]
path = "../micro"
features = ["arm"]


[build-dependencies]
crc-any = "2.3"


[features]


# Pinout features.
# ################################################################

pinout-defined = []

led-pin = ["pinout-defined"]
vsys-pin = ["pinout-defined"]
address-led-pin = ["pinout-defined"]




# XOSC features.
# ################################################################

xosc-defined = []

xosc-8MHz  = ["xosc-defined"]
xosc-10MHz = ["xosc-defined"]
xosc-12MHz = ["xosc-defined"]
xosc-15MHz = ["xosc-defined"]




# Flash features.
# ################################################################

flash-defined = []

flash-2MB  = ["flash-defined"]
flash-4MB  = ["flash-defined"]
flash-8MB  = ["flash-defined"]
flash-16MB = ["flash-defined"]




# Board features.
# ################################################################

# Adafruit boards.

# Adafruit Feather
adafruit-feather = [
	"flash-8MB", "xosc-12MHz",
	"address-led-pin", "led-pin",
]

# Adafruit Itsy Bitsy
adafruit-itsybitsy = [
	"flash-8MB", "xosc-12MHz",
	"address-led-pin",
]

# Adafruit QtPy
adafruit-qtpy = [
	"flash-8MB", "xosc-12MHz",
	"address-led-pin",
]


# Arduino boards.



# Sparkfun boards.




# Pimoroni boards.




# Raspberry boards.

# Raspberry Pico.
raspberry-pico = [
	"flash-2MB", "xosc-12MHz",
	"vsys-pin", "led-pin",
]


