[package]
name = "micro-rp2040"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.dev]
panic = "abort"
lto = true
debug = true



[profile.release]
panic = "abort"
lto = true
debug = true

[dependencies]


[dependencies.micro]
path = "../micro"
features = ["arm"]

[dependencies.embedded-hal]
version = "1.0.0-alpha.5"

[build-dependencies]
crc-any = "2.3"
cc = "1.0"


[features]


# Pinout features.
# ################################################################

pinout-defined = []

led-pin = ["pinout-defined"]
vsys-pin = ["pinout-defined"]
address-led-pin = ["pinout-defined"]




# XOSC features.
# ################################################################

xosc-defined = []

xosc-8MHz  = ["xosc-defined"]
xosc-10MHz = ["xosc-defined"]
xosc-12MHz = ["xosc-defined"]
xosc-15MHz = ["xosc-defined"]




# Flash features.
# ################################################################

flash-defined = []

at25sf128a = ["flash-defined"]
is25lp080  = ["flash-defined"]
w25q080    = ["flash-defined"]
w25z10cl   = ["flash-defined"]

flash-2MB  = ["flash-defined"]
flash-4MB  = ["flash-defined"]
flash-8MB  = ["flash-defined"]
flash-16MB = ["flash-defined"]


# Other features.
# ################################################################

skip-address-safety-checks = []
skip-size-safety-checks = []

skip-safety-checks = ["skip-address-safety-checks", "skip-size-safety-checks"]




# Board features.
# ################################################################

# Adafruit boards.

# Adafruit Feather
adafruit-feather = [
	"flash-8MB", "xosc-12MHz",
	"address-led-pin", "led-pin",
]

# Adafruit Itsy Bitsy
adafruit-itsybitsy = [
	"flash-8MB", "xosc-12MHz",
	"address-led-pin",
]

# Adafruit QtPy
adafruit-qtpy = [
	"flash-8MB", "xosc-12MHz",
	"address-led-pin",
]


# Arduino boards.



# Sparkfun boards.




# Pimoroni boards.




# Raspberry boards.

# Raspberry Pico.
raspberry-pico = [
	"flash-2MB", "w25q080",
	"xosc-12MHz",
	"vsys-pin", "led-pin",
]


